Fix navbar collapse

--- a/src/styles/facetedsearch.css
+++ b/src/styles/facetedsearch.css
@@ -38,20 +38,51 @@ a.no-style {
   max-width: 700px;
 }
 
-@media (min-width: 768px) and (max-width: 1010px) {
-    .navbar-collapse.collapse {
-        display: none !important;
-    }
-    .navbar-collapse.collapse.in {
-        display: block !important;
-    }
-    .navbar-header .collapse, .navbar-toggle {
-        display:block !important;
-    }
-    .navbar-header {
-        float:none;
-    }
-}
 .profile-img-container {
   padding: 0px;
+}
+
+@media (max-width: 1010px) {
+  .navbar-header {
+    float: none;
+  }
+  .navbar-left,.navbar-right {
+    float: none !important;
+  }
+  .navbar-toggle {
+    display: block;
+  }
+  .navbar-collapse {
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+    top: 0;
+    border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+    display: none !important;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .navbar-collapse.collapsing {
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7.5px;
+    margin-left: -15px;
+    margin-right: -15px;
+  }
+  .navbar-nav > li {
+    float: none;
+  }
+  .navbar-nav > li > a {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .collapse.in {
+    display:block !important;
+  }
 }
